add CHANGES.md / fix message (options)

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -30,7 +30,7 @@
       </label>
       <label>
         <input type="color" list="color-list" id="opt_bgcolor_hex" value="#FF0000">
-        セール作品の背景色<span class="ff-only"> (Firefox は popup では未対応)</span>
+        セール作品の背景色<span class="ff-only"> (Firefox の popup で動作不定)</span>
         <datalist id="color-list">
           <option value="#FF0000"></option>
           <option value="#00FF00"></option>
