reviewed by ChatGPT

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -58,6 +58,10 @@
                 <input type="checkbox" id="opt_ignore_carousel">
                 カルーセルへの処理を行わない
               </label>
+              <label>
+                <input type="checkbox" id="opt_activate_console_log">
+                console.log を有効にする
+              </label>
               <button id="show_button">Show storage (console)</button>
               <button id="clear_button">Clear storage</button>
               <button id="close_button">閉じる</button>
