--- a/chrome/options.html
+++ b/chrome/options.html
@@ -55,9 +55,13 @@
                 Kiseppe API (JSON) の代わりに DEBUG API にアクセスする
               </label>
               <label>
+                <input type="checkbox" id="opt_process_on_carousel">
+                カルーセルへの処理を行う
+              </label>
+              <!-- <label>
                 <input type="checkbox" id="opt_ignore_carousel">
                 カルーセルへの処理を行わない
-              </label>
+              </label> -->
               <label>
                 <input type="checkbox" id="opt_activate_console_log">
                 console.log を有効にする
