--- a/firefox/options.html
+++ b/firefox/options.html
@@ -25,6 +25,10 @@
           価格推移グラフの表示のみ（version 1.0 相当）
         </label>
         <label>
+          <input type="checkbox" id="opt_process_on_wishlist">
+          <a target="_blank" href="https://www.amazon.co.jp/hz/wishlist/ls">ほしい物リスト</a>への処理を行う
+        </label>
+        <label>
           <input type="number" id="opt_jsdr_cutoff" min="1" max="100" value="15" size="4">
           セールとみなすための実質割引率の下限
         </label>
