--- a/chrome/options.html
+++ b/chrome/options.html
@@ -72,7 +72,7 @@
                 <input type="text" id="opt_user_id" value="" size="8">
                 User ID for Kiseppe API
               </label>
-              <button id="show_button">Show storage (console)</button>
+              <!-- <button id="show_button">Show storage (console)</button> -->
               <button id="clear_button">Clear storage</button>
               <button id="close_button">閉じる</button>
             </div>
